# SAT-

./: CMakeLists.txt  Check.cpp  CopyValue.cpp  DFS.cpp  Delete.cpp  FILEREAD.cpp  GenerateByDigMethod.cpp  Judge.cpp  LasVegas.cpp  MATH.cpp  New.cpp  PlayPuzzle.cpp  Print.cpp  PuzzleInnital.cpp  README.md  ReCopyValue.cpp  Rule.cpp  SAT数独求解.sln  SAT数独求解.vcxproj  SAT数独求解.vcxproj.filters  Select.cpp  Solve.cpp  Stack.cpp  main.cpp  paixu.cpp  pre-SAT.h  youhuaqian.res
