cmake_minimum_required(VERSION 3.17)
project(heng)

set(CMAKE_CXX_STANDARD 14)

add_executable(heng main.cpp Check.cpp CopyValue.cpp CopyValue.cpp Delete.cpp DFS.cpp GenerateByDigMethod.cpp Stack.cpp FILEREAD.cpp Judge.cpp LasVegas.cpp MATH.cpp New.cpp PlayPuzzle.cpp pre-SAT.h Print.cpp PuzzleInnital.cpp ReCopyValue.cpp Rule.cpp SAT数独求解.sln SAT数独求解.vcxproj SAT数独求解.vcxproj.filters SAT数独求解.vcxproj.user Select.cpp Solve.cpp)